# RAG-

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: README.md  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: rag-workspace.tsx
app/lib/: api.ts
docs/: module-01-project-foundation-summary.md  module-02-model-config-summary.md  module-03-vector-store-summary.md  module-04-document-management-summary.md  module-05-document-parsing-summary.md  module-06-conversation-history-summary.md  module-07-conversation-memory-summary.md  module-08-rag-qa-summary.md  module-09-web-interaction-summary.md  module-10-ui-and-workflow-optimization-summary.md  module-11-api-and-shadcn-frontend-summary.md  module-12-frontend-visual-optimization-summary.md  module-13-product-grade-frontend-optimization-summary.md  module-14-documentation-refresh-summary.md  module-15-streamlit-removal-dashboard-refresh-summary.md  project-implementation-summary.md  project-runbook.md  rag-plan.md
src/rag_app/: __init__.py  app.py  cli.py
src/rag_app/api/: __init__.py  cli.py  main.py  services.py
src/rag_app/conversations/: __init__.py  memory.py  store.py
src/rag_app/core/: config.py  exceptions.py  logging.py  paths.py
src/rag_app/models/: config.py  (+2 more)
tests/: test_api_app.py  test_cli.py  test_config.py  test_conversation_memory.py  test_conversation_store.py  test_document_processing.py  test_document_store.py  test_exceptions.py  test_model_config.py  test_paths.py  test_rag_answer.py  test_vector_store.py  test_web_app.py
(+7 files in other folders)
