[project]
name = "rag-knowledge-app"
version = "0.1.0"
description = "A local RAG knowledge base Q&A app built with Python and LangChain."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chromadb>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.0",
    "docx2txt>=0.8",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "uvicorn>=0.30.0",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
rag-app = "rag_app.cli:main"
rag-api = "rag_app.api.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
cache-dir = ".uv-cache"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
